--- a/databricks data engineering/cli : command line interface.ipynb
+++ b/databricks data engineering/cli : command line interface.ipynb
@@ -17,7 +17,10 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%sql\n",
+    "select * from dev.bronze.sales"
+   ]
   }
  ],
  "metadata": {
