--- a/databricks data engineering/cli : command line interface.ipynb
+++ b/databricks data engineering/cli : command line interface.ipynb
@@ -21,6 +21,15 @@
     "%sql\n",
     "select * from dev.bronze.sales"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cli"
+   ]
   }
  ],
  "metadata": {
